@@ -1,4 +1,7 @@
-$Id: Changelog.txt,v 1.24 2012/04/09 21:07:26 nanard Exp $
+$Id: Changelog.txt,v 1.25 2012/05/02 10:30:40 nanard Exp $
+
+2012/05/02:
+	Clean CLFAGS in Makefile.
 
 2012/04/09:
 	Added -ansi to compilation flags.
